Render movies by input text into search field was added

--- a/src/search-bar/search-bar.html
+++ b/src/search-bar/search-bar.html
@@ -1,4 +1,4 @@
-<form action="" name="form">
+<form action="" name="form" class="search-bar-form">
   <div class="container">
     <div class="row">
       <div class="col-md-10">
