--- a/src/search-bar/search-bar.html
+++ b/src/search-bar/search-bar.html
@@ -1,21 +1,22 @@
 <form action="" name="form" class="search-bar-form">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-10">
-        <input type="text"
-               class="form-control"
-               placeholder="Enter you movie here"
-               ng-model="SearchBarController.searchText"
-               ng-change="SearchBarController.getVideo(SearchBarController.searchText)"
-        >
-      </div>
-      <div class="col-md-2">
-        <button type="reset"
-                ng-click="SearchBarController.clearSearchText()"
-                class="btn btn-default">
-          Clear
-        </button>
-      </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-10">
+                <input
+                    class="form-control"
+                    placeholder="Enter you movie here"
+                    ng-model="$ctrl.searchText"
+                    ng-change="$ctrl.getVideo($ctrl.searchText)"
+                >
+            </div>
+            <div class="col-md-2">
+                <button
+                    type="reset"
+                    ng-click="$ctrl.clearSearchText()"
+                    class="btn btn-default">
+                    Clear
+                </button>
+            </div>
+        </div>
     </div>
-  </div>
 </form>
